--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                     <div>
                         <h3 style="color: #2d5016; font-size: 2rem; margin-bottom: 1rem;">Our Founder</h3>
                         <p style="margin-bottom: 1.5rem; font-size: 1.1rem; line-height: 1.8;">
-                            <strong>Mr.Sharad Kalamkar</strong> founded Kalamkar Exotics in 2003 with a simple vision: to bridge the gap between farming and the hospitality industry. With over 15 years of experience in agriculture, he recognized the need for a reliable, quality-focused vegetable supplier.
+                            <strong>Mr.Sharad Kalamkar</strong> founded Kalamkar Exotics in 2003 with a simple vision: to bridge the gap between farming and the hospitality industry. With over 25 years of experience in agriculture, he recognized the need for a reliable, quality-focused vegetable supplier.
                         </p>
                         
                         <h4 style="color: #2d5016; margin-bottom: 1rem;">Our Journey</h4>
@@ -649,11 +649,11 @@
                         </div>
                         <div>
                             <h4 style="color: #4CAF50; font-size: 2rem;">2018</h4>
-                            <p>Hydroponic Expansion</p>
+                            <p>Polyhouse Expansion</p>
                         </div>
                         <div>
                             <h4 style="color: #4CAF50; font-size: 2rem;">2021</h4>
-                            <p>Started supplying to E-Commerce Giants</p>
+                            <p>Started supplying to E-Commerce Companies</p>
                         </div>
                         <div>
                             <h4 style="color: #4CAF50; font-size: 2rem;">2025</h4>
